<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_book"
        android:padding="10dp"
        android:textSize="17sp"
        android:foreground="?android:selectableItemBackground"
        android:textColor="@color/black"
        tools:ignore="HardcodedText,UnusedAttribute" />
    <TextView
        android:id="@+id/txt_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_with_friends"
        android:textColor="@color/black"
        android:foreground="?android:selectableItemBackground"
        android:textSize="17sp"
        android:padding="10dp"
        tools:ignore="HardcodedText,UnusedAttribute" />
    <TextView
        android:id="@+id/delete_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_library"
        android:textColor="@color/black"
        android:foreground="?android:selectableItemBackground"
        android:textSize="17sp"
        android:padding="10dp"
        tools:targetApi="m"
        tools:ignore="HardcodedText,UnusedAttribute" />

    <TextView
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_this_book"
        android:foreground="?android:selectableItemBackground"
        android:textSize="17sp"
        android:padding="10dp"
        android:textColor="@color/black"
        tools:targetApi="m"
        tools:ignore="HardcodedText,UnusedAttribute" />



</LinearLayout>