<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/aboutToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/text_about_us"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />


                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_arrow_back_white"
                    tools:targetApi="m"
                    tools:ignore="HardcodedText,UnusedAttribute"
                    android:contentDescription="Back btn" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--    Custom toolbar-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:src="@drawable/alim" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:textColor="@color/black"
                android:text="@string/about_me"
                android:textSize="14sp"
                tools:targetApi="o" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/dev_profiles"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"
                android:background="#DDD" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:id="@+id/dev_fb_img"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="20dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="Facebook Icon"
                    android:focusable="true"
                    android:onClick="devFacebook"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_facebook"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="devFacebook"
                    android:text="@string/text_fb"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/dev_fb_img"
                    app:layout_constraintStart_toEndOf="@id/dev_fb_img"
                    app:layout_constraintTop_toTopOf="@+id/dev_fb_img"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/dev_insta_img"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="devInstagram"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dev_fb_img"
                    app:srcCompat="@drawable/instagram"
                    android:contentDescription="Instagram Logo"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="devInstagram"
                    android:text="@string/text_instagram"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/dev_insta_img"
                    app:layout_constraintStart_toEndOf="@id/dev_insta_img"
                    app:layout_constraintTop_toTopOf="@+id/dev_insta_img" />


                <!--                -->
                <ImageView
                    android:id="@+id/dev_twitter_img"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="devTwitter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dev_insta_img"
                    app:srcCompat="@drawable/ic_twitter"
                    android:contentDescription="Twitter logo"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="devTwitter"
                    android:text="@string/text_twitter"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/dev_twitter_img"
                    app:layout_constraintStart_toEndOf="@id/dev_twitter_img"
                    app:layout_constraintTop_toTopOf="@+id/dev_twitter_img" />

                <ImageView
                    android:id="@+id/dev_git_img"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="devGithub"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dev_twitter_img"
                    app:srcCompat="@drawable/ic_github"
                    android:contentDescription="Github Logo"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="devGithub"
                    android:text="@string/text_github"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/dev_git_img"
                    app:layout_constraintStart_toEndOf="@id/dev_git_img"
                    app:layout_constraintTop_toTopOf="@+id/dev_git_img" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>